--- a/simulator/Tutorial.ipynb
+++ b/simulator/Tutorial.ipynb
@@ -318,8 +318,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congestion\n",
-    "----------\n",
+    "Congestion with large RTT\n",
+    "------------------------\n",
     "\n",
     "In this exemple, we will add a third server, server3, connected to the same router than server2. Two flows will be created, from server1 to server2 and from server3 to server2, creating a congestion point on the router port connected to server2. The first flow, flow1, is going through a much longer path and therefore has a much higher RTT."
    ]
