--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (coord.py, line 107)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"coord.py\"\u001b[0;36m, line \u001b[0;32m107\u001b[0m\n\u001b[0;31m    def request_transfer (self, request):\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%autoreload 2\n",
     "\n",
@@ -72,8 +63,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Switches,containers, etc are python objects. There is no access functions to their values. They can directly be accessed:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "192.168.120.41 br2 11 38.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print wash_sw.ip, wash_sw.vfc, wash_sw.ofport, wash_sw.rtt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -95,17 +110,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "Once the config is written into a file, it can be retrieved later:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +145,7 @@
        "[wash-tb-of-1, cern-272-tb-of-1, amst-tb-of-1]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
