--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -37,16 +37,17 @@
     "amst_sw = Switch(\"amst-tb-of-1\",\"192.168.120.35\",None,\"br1\",23,rtt=82.5)\n",
     "aofa_sw = Switch(\"aofa-tb-of-1\",\"192.168.120.33\",None,\"br2\",2,rtt=5.3)\n",
     "denv_sw = Switch(\"denv-tb-of-1\",\"192.168.120.37\",None,\"br1\",10,rtt=2)\n",
-    "\n",
-    "switches=[wash_sw,cern_sw,amst_sw]\n",
+    "atla_sw = Switch(\"atla-tb-of-1\",\"192.168.120.34\",None,\"br1\",9,rtt=39.5)\n",
+    "switches=[wash_sw,cern_sw,amst_sw,aofa_sw,denv_sw]\n",
     "\n",
     "# Linux Containers\n",
     "wash_dtn = Container(\"wash-192\",\"192.168.120.192\",port=\"eth1\")\n",
     "cern_dtn = Container(\"cern-194\",\"192.168.120.194\",port=\"eth1\")\n",
     "amst_dtn = Container(\"amst-190\",\"192.168.120.190\",port=\"eth1\")\n",
     "aofa_dtn = Container(\"aofa-191\",\"192.168.120.191\",port=\"eth1\")\n",
-    "denv_dtn = Container(\"denv-190\",\"192.168.120.195\",port=\"eth1\")\n",
-    "containers = [wash_dtn,cern_dtn,amst_dtn,aofa_dtn]\n",
+    "denv_dtn = Container(\"denv-201\",\"192.168.120.201\",port=\"eth1\")\n",
+    "atla_dtn = Container(\"atla-200\",\"192.168.120.200\",port=\"eth1\")\n",
+    "containers = [wash_dtn,cern_dtn,amst_dtn,aofa_dtn,denv_dtn,atla_dtn]\n",
     "\n",
     "# Simulated sites\n",
     "wash = Site(name=\"wash\", switch=wash_sw, container=wash_dtn)\n",
@@ -54,9 +55,10 @@
     "cern = Site(name=\"cern\", switch=cern_sw, container=cern_dtn)\n",
     "denv = Site(name=\"denv\", switch=denv_sw, container=denv_dtn)\n",
     "aofa = Site(name=\"aofa\", switch=aofa_sw, container=aofa_dtn)\n",
+    "atla = Site(name=\"atla\", switch=atla_sw, container=atla_dtn)\n",
     "#scinet = Site(name=\"scinet\", switch=None, container=scinet_dtn)\n",
     "\n",
-    "sites = [wash,amst,cern,denv,aofa]\n",
+    "sites = [wash,amst,cern,denv,aofa,atla]\n",
     "\n",
     "config =Config(switches=switches,containers=containers,sites=sites)\n",
     "config.save(config_file=\"demo.config\")"
@@ -181,6 +183,20 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
