. renamed traffic-generator.py into trafficgen.py . fixed a bug in coord.py

--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -158,17 +158,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-37-75035b53da17>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-75035b53da17>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    from traffic-generator import traffic_gen\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "from traffic-generator import traffic_gen\n",
+    "\n",
+    "def get_sources(config):\n",
+    "    sources=[]\n",
+    "    dtns = config.containers()\n",
+    "    for dtn in dtns:\n",
+    "        sources.append(dtn.name)\n",
+    "    return sources\n",
+    "\n",
+    "sources = get_sources(config)\n",
+    "capacity = 500000 # 500 Mbps\n",
+    "epoch = 5 * 60 # 5 mins\n",
+    "gen = traffic_gen(sources,capacity,epoch)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named traffic_generator",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-19e1f9d40927>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtraffic_generator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named traffic_generator"
+     ]
+    }
+   ],
+   "source": [
+    "import traffic_generator"
+   ]
   },
   {
    "cell_type": "code",
