--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -282,10 +282,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10240 500000 196.608\n",
+      "5120 500000 98.304\n",
+      "30720 500000 589.824\n",
+      "5120 500000 98.304\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "import scheduler\n",
+    "\n",
+    "class SingleFileGen:\n",
+    "\n",
+    "    def __init__(self,sources,C,epoch,buckets,padding=1.2):\n",
+    "        self.capacity = C\n",
+    "        self.epoch = epoch\n",
+    "        self.nodes = sources\n",
+    "        self.buckets=buckets\n",
+    "        self.padding = padding\n",
+    "        np.random.seed(3)\n",
+    "\n",
+    "\n",
+    "    def generate_requests(self):\n",
+    "\n",
+    "    \trequests = []\n",
+    "    \tfor src in self.nodes:\n",
+    "            size = np.random.choice(self.buckets)\n",
+    "            min_duration = (size * 8 * 1000 * self.padding) / self.capacity \n",
+    "            print size,self.capacity, min_duration\n",
+    "            duration = min_duration * (np.random.exponential(scale=1)) + min_duration\n",
+    "            dst = 0\n",
+    "            req = scheduler.Request(src,dst,size,0,duration)\n",
+    "            requests.append(req)\n",
+    "        return requests\n",
+    "\n",
+    "def get_sources(config):\n",
+    "    sources=[]\n",
+    "    dtns = config.containers\n",
+    "    for dtn in dtns:\n",
+    "        sources.append(dtn.name)\n",
+    "    return sources\n",
+    "\n",
+    "sources = get_sources(config)\n",
+    "capacity = 500000 # 500 Mbps\n",
+    "epoch = 5 * 60 # 5 mins\n",
+    "#gen = traffic_gen(sources,capacity,epoch)\n",
+    "buckets=[30*1024,15*1024,10*1024,5*1024,1*1025,512,128]\n",
+    "gen = SingleFileGen(sources,capacity,epoch,buckets)\n",
+    "reqs = gen.generate_requests()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[src= wash-192 dst: 0 size: 10240 deadline: 211.029282841,\n",
+       " src= cern-194 dst: 0 size: 5120 deadline: 132.097514048,\n",
+       " src= amst-190 dst: 0 size: 30720 deadline: 1086.67391744,\n",
+       " src= aofa-191 dst: 0 size: 5120 deadline: 321.079199776]"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reqs"
+   ]
   },
   {
    "cell_type": "code",
