--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -29,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%autoreload 2\n",
@@ -178,7 +182,9 @@
   {
    "cell_type": "code",
    "execution_count": 333,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from coord import SingleFileGen\n",
@@ -288,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 335,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gen.save(\"scenario.data\",reqs)"
@@ -325,36 +333,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1111 500000000\n",
-      "[wash-192 -> scinet-dtn completion: 0, cern-194 -> scinet-dtn completion: 0, amst-190 -> scinet-dtn completion: 0, aofa-191 -> scinet-dtn completion: 0, denv-201 -> scinet-dtn completion: 0, atla-200 -> scinet-dtn completion: 0]\n",
-      "\n",
-      "t_now =  0.0\n",
-      "new request: flow 1  size  10240 Rmin 37853546  td  2164.13012828  src,dst  wash-192 scinet-dtn\n",
-      "Success, flow has been scheduled with rate  500000000  te =  163\n",
-      "new request: flow 2  size  5120 Rmin 37760780  td  1084.7233514  src,dst  cern-194 scinet-dtn\n",
-      "after pacing: flow 1  Ralloc:  462239220  te  177\n",
-      "Success, the flow was assigned rate of  37760780  Rmin  37760780  te  1084\n",
-      "new request: flow 3  size  30720 Rmin 37590920  td  6537.74899174  src,dst  amst-190 scinet-dtn\n",
-      "after pacing: flow 1  Ralloc:  424648300  te  192\n",
-      "Success, the flow was assigned rate of  37590920  Rmin  37590920  te  6537\n",
-      "new request: flow 4  size  5120 Rmin 37114172  td  1103.62151998  src,dst  aofa-191 scinet-dtn\n",
-      "after pacing: flow 1  Ralloc:  387534128  te  211\n",
-      "Success, the flow was assigned rate of  37114172  Rmin  37114172  te  1103\n",
-      "new request: flow 5  size  15360 Rmin 37864509  td  3245.25527221  src,dst  denv-201 scinet-dtn\n",
-      "after pacing: flow 1  Ralloc:  349669619  te  234\n",
-      "Success, the flow was assigned rate of  37864509  Rmin  37864509  te  3245\n",
-      "new request: flow 6  size  512 Rmin 37860601  td  108.186342765  src,dst  atla-200 scinet-dtn\n",
-      "after pacing: flow 1  Ralloc:  311809018  te  262\n",
-      "Success, the flow was assigned rate of  37860601  Rmin  37860601  te  108\n",
-      "[('wash-192', 349669619), ('cern-194', 37760780), ('amst-190', 37590920), ('aofa-191', 37114172), ('denv-201', 37864509), ('atla-200', 37860601)] [] []\n",
-      "total 537\n"
+      "Exception in thread Thread-5:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/anaconda/lib/python2.7/threading.py\", line 754, in run\n",
+      "    self.__target(*self.__args, **self.__kwargs)\n",
+      "  File \"coord.py\", line 243, in run\n",
+      "    self.app.run(host=self.ip, threaded=True)\n",
+      "AttributeError: App instance has no attribute 'app'\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "App instance has no attribute 'add_url_rule'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-0367d46f3cf3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcoord\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCoordinator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcoord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCoordinator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"caliber-slice\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepoch_time\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mconfig_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"demo.config\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscenario_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"scenario.data\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax_rate_mbps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/lomax/Documents/workspace/calibers/sc17/coord.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, config_file, epoch_time, max_rate_mbps, scenario_file, algo, app_ip)\u001b[0m\n\u001b[1;32m    138\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp_ip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapp_ip\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscheduler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScheduler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mepoch_time\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malgo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malgo\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_rate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 140\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mApp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"name\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp_ip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mrequest_transfer\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/lomax/Documents/workspace/calibers/sc17/coord.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, coord, ip)\u001b[0m\n\u001b[1;32m    238\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFlask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"__name__\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 240\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_url_rule\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'current'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcurrent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    241\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    242\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: App instance has no attribute 'add_url_rule'"
      ]
     }
    ],
@@ -430,6 +438,45 @@
    "source": [
     "coord.config.dtns[0].current_request.completed = True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from flask import Flask\n",
+    "\n",
+    "class A(Flask):\n",
+    "    def __init__(self):\n",
+    "        Flask.__init__(self,__name__)\n",
+    "        self.add_url_rule('/','hello_world',self.hello_world)\n",
+    "    def add_endpoint(self, endpoint=None, endpoint_name=None, handler=None):\n",
+    "        self.add_url_rule(endpoint, endpoint_name, handler)\n",
+    "    def hello_world(self):\n",
+    "        return 'Hello World!'\n",
+    "\n",
+    "a = A()\n",
+    "\n",
+    "a.run(host=\"127.0.0.1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
