--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "\n",
@@ -53,7 +44,7 @@
     "amst_sw = Switch(\"amst-tb-of-1\",\"192.168.120.35\",None,\"br1\",23,rtt=82.5)\n",
     "aofa_sw = Switch(\"aofa-tb-of-1\",\"192.168.120.33\",None,\"br2\",2,rtt=5.3)\n",
     "denv_sw = Switch(\"denv-tb-of-1\",\"192.168.120.37\",None,\"br1\",10,rtt=2)\n",
-    "atla_sw = Switch(\"atla-tb-of-1\",\"192.168.120.34\",None,\"br1\",9,rtt=39.5)\n",
+    "atla_sw = Switch(\"atla-tb-of-1\",\"192.168.120.34\",None,\"br1\",8,rtt=39.5)\n",
     "switches=[wash_sw,cern_sw,amst_sw,aofa_sw,denv_sw,atla_sw]\n",
     "\n",
     "# Data Transfer Node\n",
@@ -340,23 +331,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Exception in thread Thread-37:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"coord.py\", line 152, in run\n",
+      "    if debug:\n",
+      "NameError: global name 'debug' is not defined\n",
       " * Running on http://localhost:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [02/Nov/2017 15:09:17] \"PUT /api/files/file1 HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TEST False\n",
-      "ARGS {'completion': 0.0008456109108939628, 'timestamp': 1508278312.707418, 'rate': 13288.663254459878, 'received': 13425}\n"
+      "\n"
      ]
     }
    ],
@@ -366,6 +356,7 @@
     "\n",
     "coord = Coordinator(name=\"caliber-slice\",epoch_time=10,config_file=\"demo.config\", scenario_file=\"scenario.data\",max_rate_mbps=500)\n",
     "coord.scheduler.debug = False\n",
+    "coord.debug = False\n",
     "coord.start()\n"
    ]
   },
@@ -436,7 +427,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -500,13 +493,15 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "TESTING SLICE CONFIGURATION\n",
+    "--------------------------\n",
+    "Following is the configuration for the testing topology."
+   ]
   },
   {
    "cell_type": "code",
@@ -515,7 +510,45 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%autoreload 2\n",
+    "# requires flask and flask_restful packages (pip install flask_restful)\n",
+    "from coord import Switch, DTN, Site, Config, get_config\n",
+    "\n",
+    "# Corsa Switches - rtt to SCinet Denver.\n",
+    "wash_sw = Switch(\"wash-tb-of-1\",\"192.168.120.41\",None,vfc=\"br1\",ofport=11,rtt=38.8)\n",
+    "cern_sw = Switch(\"cern-272-tb-of-1\",\"192.168.120.36\",None,\"br1\",10,rtt=89.5)\n",
+    "amst_sw = Switch(\"amst-tb-of-1\",\"192.168.120.35\",None,\"br1\",23,rtt=82.5)\n",
+    "aofa_sw = Switch(\"aofa-tb-of-1\",\"192.168.120.33\",None,\"br1\",2,rtt=5.3)\n",
+    "denv_sw = Switch(\"denv-tb-of-1\",\"192.168.120.37\",None,\"br1\",10,rtt=2)\n",
+    "atla_sw = Switch(\"atla-tb-of-1\",\"192.168.120.34\",None,\"br1\",8,rtt=39.5)\n",
+    "switches=[wash_sw,cern_sw,amst_sw,aofa_sw,denv_sw,atla_sw]\n",
+    "\n",
+    "# Data Transfer Node\n",
+    "wash_dtn = DTN(\"wash-192\",\"192.168.120.192\",port=\"eth1\")\n",
+    "cern_dtn = DTN(\"cern-194\",\"192.168.120.194\",port=\"eth1\")\n",
+    "amst_dtn = DTN(\"amst-190\",\"192.168.120.190\",port=\"eth1\")\n",
+    "aofa_dtn = DTN(\"aofa-191\",\"192.168.120.191\",port=\"eth1\")\n",
+    "denv_dtn = DTN(\"denv-201\",\"192.168.120.201\",port=\"eth1\")\n",
+    "atla_dtn = DTN(\"atla-200\",\"192.168.120.200\",port=\"eth1\")\n",
+    "dtns = [wash_dtn,cern_dtn,amst_dtn,aofa_dtn,denv_dtn,atla_dtn]\n",
+    "\n",
+    "scinet_dtn = DTN(\"scinet-dtn\",\"192.168.120.37\",port=\"eth1\")\n",
+    "\n",
+    "# Simulated sites\n",
+    "wash = Site(name=\"wash\", switch=wash_sw, dtn=wash_dtn)\n",
+    "amst = Site(name=\"amst\", switch=amst_sw, dtn=amst_dtn)\n",
+    "cern = Site(name=\"cern\", switch=cern_sw, dtn=cern_dtn)\n",
+    "denv = Site(name=\"denv\", switch=denv_sw, dtn=denv_dtn)\n",
+    "aofa = Site(name=\"aofa\", switch=aofa_sw, dtn=aofa_dtn)\n",
+    "atla = Site(name=\"atla\", switch=atla_sw, dtn=atla_dtn)\n",
+    "scinet = Site(name=\"scinet\", switch=None, dtn=scinet_dtn)\n",
+    "\n",
+    "sites = [wash,amst,cern,denv,aofa,atla]\n",
+    "\n",
+    "config =Config(switches=switches,dtns=dtns,sites=sites)\n",
+    "config.save(config_file=\"testing.config\")\n"
+   ]
   }
  ],
  "metadata": {
