--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -4,38 +4,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ESnet Circuits\n",
-    "-------------\n",
+    "There are three different network topologies:\n",
+    "- Testing: AMST, AOFA, CERN, DENV, WASH, ATLA -> DENV (not SCinet)\n",
+    "- Calibers: AMST, AOFA, CERN, DENV, WASH, ATLA -> SCINET\n",
+    "- TCP: AMST, AOFA, CERN, DENV, WASH, ATLA -> SCINET\n",
     "\n",
-    "VLAN\n",
-    "2050-1 atla\n",
-    "2052-3 wash\n",
-    "2054-5 aofa\n",
-    "2056-7 amst\n",
-    "2058-9 cern\n",
-    "2060-1 denv\n",
-    "2062-3 star\n",
+    "Each topology is handle by its own L2VPN VFC on each of the CORSA, by convention:\n",
+    "- Testing is br1\n",
+    "- Calibers is br2\n",
+    "- TCP is br2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TESTING TOPOLOGY\n",
+    "----------------\n",
     "\n",
-    "OSCARS\n",
-    "es.net-6625: atla (2050)\n",
-    "es.net-6626: atla (2051)\n",
-    "es.net-6613: wash (2052)\n",
-    "es.net-6614: wash (2053)\n",
-    "es.net-6624: aofa (2054)\n",
-    "es.net-6612: aofa (2055)\n",
-    "es.net-6615: amst (2056)\n",
-    "es.net-6616: amst (2057)\n",
-    "es.net-6617: cern (2058)\n",
-    "es.net-6618: cern (2059)\n",
-    "es.net-6619: denv (2060)\n",
-    "es.net-6620: denv (2061)\n",
-    "es.net-6621: star (2062)\n",
-    "es.net-6622: star (2063)\n",
+    "Receiving DTN at DENV: 192.168.120.117 VFC= br1 ofport 11 vlan1117\n",
+    "Calibers controller at ATLA: 192.168.120.119 VFC= br1 ofport 9 vlan 1119 \n",
     "\n",
+    "AMST - DENV corsa switch has issues. not yet online\n",
+    "- OSCARS vlan 2280 es.net-6693\n",
+    "- DTN 192.168.120.190 VFC= br1 ofport ?\n",
     "\n",
-    "SCinet endpoint\n",
-    "--------------\n",
-    "denv:9/1/4"
+    "CERN - DENV\n",
+    "- OSCARS vlan 2597 es.net-6678\n",
+    "- DTN: 192.168.120.194 VFC= br1 ofport 10 vlan 1194\n",
+    "\n",
+    "AOFA - DENV\n",
+    "- OSCARS vlan 289  es.net-6691\n",
+    "- DTN: 192.168.120.191 VFC= br1 ofport 1 vlan 1191\n",
+    "\n",
+    "ATLA - DENV\n",
+    "- OSCARS vlan 384  es.net-6690\n",
+    "- DTN: 192.168.120.200 VFC= br1 ofport 8 vlan 1200\n",
+    "\n",
+    "WASH - DENV\n",
+    "- OSCARS vlan 1591 es.net-6692\n",
+    "- DTN: 192.168.120.192 VFC= br1 ofport 10 vlan 1192\n",
+    "\n",
+    "DENV - DENV\n",
+    "- DTN: 192.168.120.201 VFC= br1 ofport 10 vlan 1201"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CALIBERS TOPOLOGY\n",
+    "-----------------\n",
+    "\n",
+    "Receiving DTN at SCInet ?\n",
+    "Calibers controller at ATLA: 192.168.120.119 VFC= br2 ofport 9 vlan 119 \n",
+    "\n",
+    "AMST - SCinet corsa switch has issues. not yet online\n",
+    "- OSCARS vlan 2056 es.net-6615\n",
+    "- DTN 192.168.120.190 VFC= br2 ofport ?\n",
+    "\n",
+    "CERN - SCinet\n",
+    "- OSCARS vlan 2058 es.net-6617\n",
+    "- DTN: 192.168.120.194 VFC= br2 ofport 10 vlan 194\n",
+    "\n",
+    "AOFA - SCinet\n",
+    "- OSCARS vlan 2054  es.net-6624\n",
+    "- DTN: 192.168.120.191 VFC= br2 ofport 1 vlan 191\n",
+    "\n",
+    "ATLA - SCinet\n",
+    "- OSCARS vlan 2050  es.net-6625\n",
+    "- DTN: 192.168.120.200 VFC= br2 ofport 8 vlan 200\n",
+    "\n",
+    "WASH - SCinet \n",
+    "- OSCARS vlan 2052 es.net-6613\n",
+    "- DTN: 192.168.120.192 VFC= br2 ofport 10 vlan 192\n",
+    "\n",
+    "DENV - SCinet \n",
+    "- OSCARS vlan 2060 es.net-6619\n",
+    "- DTN: 192.168.120.201 VFC= br2 ofport 10 vlan 201"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TCP ONLY TOPOLOGY\n",
+    "----------------\n",
+    "\n",
+    "Receiving DTN at SCInet ?\n",
+    "Calibers controller at ATLA: 192.168.120.113 VFC= br3 ofport 9 vlan 113 \n",
+    "\n",
+    "AMST - SCinet corsa switch has issues. not yet online\n",
+    "- OSCARS vlan 2057 es.net-6616\n",
+    "- DTN 192.168.120.111 VFC= br3 ofport ?\n",
+    "\n",
+    "CERN - SCinet\n",
+    "- OSCARS vlan 2059 es.net-6618\n",
+    "- DTN: 192.168.120.112 VFC= br3 ofport 10 vlan 112\n",
+    "\n",
+    "AOFA - SCinet\n",
+    "- OSCARS vlan 2055  es.net-6612\n",
+    "- DTN: 192.168.120.114 VFC= br3 ofport 1 vlan 114\n",
+    "\n",
+    "ATLA - SCinet\n",
+    "- OSCARS vlan 2051  es.net-6626\n",
+    "- DTN: 192.168.120.113 VFC= br3 ofport 8 vlan 113\n",
+    "\n",
+    "WASH - SCinet \n",
+    "- OSCARS vlan 2053 es.net-6614\n",
+    "- DTN: 192.168.120.192 VFC= br3 ofport 10 vlan 192\n",
+    "\n",
+    "DENV - SCinet \n",
+    "- OSCARS vlan 2061 es.net-6620\n",
+    "- DTN: 192.168.120.115 VFC= br3 ofport 10 vlan 115"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n"
    ]
   },
   {
@@ -45,28 +134,39 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "Calibers slice topology\n",
-    "------------------------\n",
     "\n",
-    "2050 atla\n",
-    "2052 wash\n",
-    "2054 aofa\n",
-    "2056 amst\n",
-    "2058 cern\n",
-    "2060 denv\n",
-    "2062 star\n",
     "\n",
-    "TCP slice topology\n",
-    "------------------\n",
+    "atla -> nash -> hous -> elpa -> albq -> denv\n",
+    "wash -> nash -> hous -> elpa -> albq -> denv\n",
+    "aofa -> wash -> nash -> hous -> elpa -> albq -> denv\n",
+    "amst -> cern-272 -> cern-513 -> lond -> aofa -> wash -> nash -> hous -> elpa -> albq -> denv \n",
+    "cern-272 -> cern-513 -> lond -> aofa -> wash -> nash -> hous -> elpa -> albq -> denv \n",
+    "star -> chic -> kans -> denv\n",
     "\n",
-    "2051 atla\n",
-    "2053 wash\n",
-    "2055 aofa\n",
-    "2057 amst\n",
-    "2059 cern\n",
-    "2061 denv\n",
-    "2063 star\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n"
    ]
